[package]
name = "reverse_proxy"
version = "0.2.0"
edition = "2021"

[dependencies]
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
